feat: Create `/api/config` endpoint to serve public feature flags, including the new `showCommunity` setting.

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -85,5 +85,6 @@
     "thrasher",
     "skateboardingisfun"
   ],
-  "showLearnCenter": true
+  "showLearnCenter": true,
+  "showCommunity": false
 }
